--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="chart created using amCharts live editor" />
 
 		<!-- amCharts javascript sources -->
-		<script type="text/javascript" src="http://www.amcharts.com/lib/3/amcharts.js"></script>
+		<script type="text/javascript" src="javascripts/amchart.js"></script>
 		<script type="text/javascript" src="http://www.amcharts.com/lib/3/serial.js"></script>
 		<script type="text/javascript" src="http://www.amcharts.com/lib/3/themes/light.js"></script>
 
